# ShieldOfSound

./: CMakeLists.txt  README.md  aescrypto.hpp  file.h  filedb.cpp  filedb.h  main.cpp  netutil.hpp  rsacrypto.hpp  session.cpp  session.h  user.h  userdb.cpp  userdb.h
lib/argon2/: CMakeLists.txt
lib/argon2/Argon2/: argon2.h
lib/boost/: CMakeLists.txt  base64.cpp  base64.hpp
lib/mbedtls/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
ui/: dashboard.html  file.html  login.html  profile.html  register.html
ui/admin/: files.html  users.html
